@@ -1,5 +1,6 @@
 3.0.2 dev
 - Added classname to the declaration analysis of properties.
+- Added analysis of cUrl resources.
 - Bugfix: Replace the $hellip; in the file service, it may cause
   double escaping issues in the backend of some systems.
 - Bugfix: The method analysis doesn't take traits into account.
